# telegram-news-sentiment

./: .pre-commit-config.yaml  README.md  pyproject.toml
configs/: baseline.yaml  preprocessing.yaml  qwen.yaml
data/: .gitignore
data/processed/: test.json  val.json
data/raw/: data.json.dvc
news-sentiment/: .gitignore
news-sentiment/baseline/: train.py
news-sentiment/models/: model.joblib
telegram_news_sentiment/: .gitignore  data_loading.py  preprocessing.py
telegram_news_sentiment/baseline/: model.py  train.py
telegram_news_sentiment/models/: qwen_module.py
telegram_news_sentiment/qwen/: train_qwen.py
